--- a/css/main.css
+++ b/css/main.css
@@ -41,14 +41,19 @@
     padding: 100px 0;
     background: #f5f5f5;
 }
-    visibility: visible;
-    animation-name: fadeInDown;
+/*contacto*/
+#get-in-touch {
+    padding: 60px 0 67px;
+    background-image: -moz-linear-gradient(90deg, #2caab3 0%, #2c8cb3 100%);
+    background-image: -webkit-linear-gradient(90deg, #2caab3 0%, #2c8cb3 100%);
+    background-image: -ms-linear-gradient(90deg, #2caab3 0%, #2c8cb3 100%);
+    color: #fff;
 }
-.section-header .section-title {
-    font-size: 44px;
-    color: #272727;
-    text-transform: uppercase;
-    position: relative;
-    padding-bottom: 20px;
-    margin: 0 0 20px;
+#contact .container-wrapper {
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(69, 174, 214, 0.3);
+    z-index: 1;
+    padding-top: -50%
 }
